# Distributed-System

./: CMakeLists.txt  Dockerfile  README.md
docs/: distribuited_system.drawio  hardware
docs/dependencies/: deps
esp8266/: udp.ino
server/: CMakeLists.txt
server/include/: protocol.h  sensors.h
server/manpages/: centralserver
server/src/: main.c
